--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon app"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
