--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.3.0",
     "pg": "^7.12.1",
     "pug": "2.0.0-beta11",
     "react": "^16.9.0",
